--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@xenova/transformers": "^2.17.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "ts-node": "^10.9.2",
