--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@sparticuz/chromium": "^138.0.2",
     "@xenova/transformers": "^2.17.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "puppeteer": "^24.19.0",
+    "puppeteer-core": "^24.19.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
